# NdkRepository

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ytempest/ndkrepository/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ytempest/ndkrepository/: CompressImgActivity.kt  Const.kt  FileEncryptActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_comperss_img.xml  activity_file_encrypt.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ytempest/ndkrepository/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ndk/: CMake.md  build.gradle
ndk/src/androidTest/java/com/ytempest/ndk/: ExampleInstrumentedTest.kt
ndk/src/main/: AndroidManifest.xml
ndk/src/main/cpp/: CMakeLists.txt  file_encrypt.cpp  ndk_tools.cpp
ndk/src/main/cpp/image/: compress_img.cpp  compress_img.h
ndk/src/main/java/com/ytempest/ndk/: EncryptUtils.java  ImageUtils.java  NdkTools.java
ndk/src/test/java/com/ytempest/ndk/: ExampleUnitTest.kt
